Add credential email feature with username uniqueness check and fix Docker configurations

--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,15 @@ ADMIN_EMAIL=admin@vendorportal.com
 ADMIN_PASSWORD=admin123
 
 # ========================================
+# Vendor Credential Email Configuration
+# ========================================
+ADMIN_SENDER_EMAIL=your-admin-email@gmail.com
+SUPPORT_EMAIL=support@company.com
+SUPPORT_PHONE=+91-9876543210
+VENDOR_PORTAL_URL=http://localhost:8000
+COMPANY_NAME=Your Company Name
+
+# ========================================
 # Queue Configuration (Optional - defaults provided)
 # ========================================
 BATCH_SIZE=10
