--- a/queue_service/Dockerfile
+++ b/queue_service/Dockerfile
@@ -8,15 +8,15 @@ FROM node:20-slim
 # Set working directory
 WORKDIR /app
 
-# Copy package files
+# Copy package files from root
 COPY package*.json ./
 
 # Install dependencies (production only)
-RUN npm ci --only=production && \
+RUN npm install --omit=dev && \
     npm cache clean --force
 
-# Copy application code
-COPY . .
+# Copy queue_service code
+COPY queue_service/ ./queue_service/
 
 # Expose port (Queue service runs on 3000)
 EXPOSE 3000
@@ -26,4 +26,4 @@ HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
     CMD node -e "require('http').get('http://localhost:3000/health', (r) => { r.statusCode === 200 ? process.exit(0) : process.exit(1) })" || exit 1
 
 # Run queue service
-CMD ["node", "index.js"]
+CMD ["node", "queue_service/index.js"]
