--- a/queue_service/Dockerfile.worker
+++ b/queue_service/Dockerfile.worker
@@ -7,15 +7,15 @@ FROM node:20-slim
 
 WORKDIR /app
 
-# Copy package files
+# Copy package files from root
 COPY package*.json ./
 
 # Install dependencies
-RUN npm ci --only=production && \
+RUN npm install --omit=dev && \
     npm cache clean --force
 
-# Copy application code
-COPY . .
+# Copy queue_service code
+COPY queue_service/ ./queue_service/
 
 # Run async extraction worker
-CMD ["node", "workers/async_extraction_worker.js"]
+CMD ["node", "queue_service/workers/async_extraction_worker.js"]
